...
import { styles } from "./styles/CalendarManuallyAdd_styles";
import DateTimePicker from "@react-native-community/datetimepicker";

const buildings = [
  // SGW
  "Hall Building",
  "McConnell Building",
  "Visual Arts Building",
  "Engineering & Visual Arts",
  "Grey Nuns Building",
  "Faubourg Building (FG)",
  "CL Annex Building",
  "Toronto-Dominion Building",
...
  "Stinger Dome Building",
  "PERFORM Centre",
  "Recreation and Athletics Complex",
  "Centre for Structural and Functional Genomics",
  "Communications Studies and Journalism Building",
  "Richard J. Renaud Science Complex",
  "Administration Building",
  "Central Building",
  "Loyola Jesuit Hall and Conference Centre",
  "F.C. Smith Building",
  "Quadrangle",
  "Psychology Building",
  "Vanier Extension",
...
