...
    userDraggedMap,
    setUserDraggedMap,
    selectedPois,
    onPoiPress,
  } = props;

  const mapRef = useRef(null);

  useImperativeHandle(ref, () => mapRef.current);

  const snapBackToUser = () => {
    if (!mapRef.current || !userLocation) return;
    mapRef.current.animateToRegion(
...
