...
       style={styles.userIcon}
       />
         
         <Text style={styles.text}>WELCOME TO WHERE2GO</Text>

         <TouchableOpacity style={styles.skipButton} onPress = {onSkip}>
          <Text style={styles.skipText}>Continue</Text>
        </TouchableOpacity>

      </View>
    </ImageBackground>
  );
};
...
