...
                  </Pressable>
                </View>
              )}

              <Pressable 
              style={styles.goInsideBtn} 
              testID="go-inside"
              onPress={() => onGoInside(building)}>
                <Text style={styles.goInsideBtnText}>Go inside <Ionicons size={20} name="log-in-outline"></Ionicons></Text>
              </Pressable>
            </View>
          </ScrollView>
        </Pressable>
...
