appId: com.where2go.app

---
- launchApp:
    clearState: true

- assertVisible:
    id: "map"

- assertVisible: "SGW"

- tapOn:
    id: "campus-switch"
    
- assertVisible: "Loyola"
- assertVisible:
    id: "map"

