appId: host.exp.exponent
---
- tapOn: Skip
- waitForAnimationToEnd
- extendedWaitUntil:
    visible:
      id: mapRef
    timeout: 15000
- waitForAnimationToEnd
- tapOn:
    point: "53%,75%"
- waitForAnimationToEnd
- assertVisible: "Grey Nuns Building"
- tapOn: "Set as Departure"
- waitForAnimationToEnd
- tapOn:
    point: "50%,25%"
- waitForAnimationToEnd
- tapOn:
    id: "menu-button"
- tapOn: Direction
- waitForAnimationToEnd
- assertVisible: "Plan Your Trip"
- assertVisible: "Grey Nuns Building"
- tapOn:
    id: "inputDestLoc"
- inputText:
    text: "hall"
- waitForAnimationToEnd
- tapOn: "Hall Building"
- waitForAnimationToEnd
- assertVisible: "Grey Nuns Building"
- assertVisible: "Hall Building"
