appId: host.exp.exponent
---
- tapOn: Skip
- waitForAnimationToEnd
- tapOn:
    id: gps
- assertVisible:
    id: mapRef

