appId: host.exp.exponent
---
- tapOn: Skip
- waitForAnimationToEnd

- tapOn: "gps"
- tapOn: Skip

- assertNotVisible:
    id: "campusMarker"


    
